Reviewed by Anders Carlsson.
http://bugs.webkit.org/show_bug.cgi?id=14124
[CURL] Support data URLs

Add data URL support (both Base64 and percent-encoded formats).

Inspired by code from the Qt port.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27189 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,23 @@
 2007-10-28  Alp Toker  <alp@atoker.com>
 
+        Reviewed by Anders Carlsson.
+
+        http://bugs.webkit.org/show_bug.cgi?id=14124
+        [CURL] Support data URLs
+
+        Add data URL support (both Base64 and percent-encoded formats).
+
+        Inspired by code from the Qt port.
+
+        * platform/Base64.cpp:
+        (WebCore::base64Decode):
+        * platform/Base64.h:
+        * platform/network/curl/ResourceHandleManager.cpp:
+        (WebCore::ResourceHandleManager::startScheduledJobs):
+        (WebCore::parseDataUrl):
+
+2007-10-28  Alp Toker  <alp@atoker.com>
+
         Reviewed by Adam Roben.
 
         http://bugs.webkit.org/show_bug.cgi?id=15701
