--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-28  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Maciej and Geoff, in unison.
+
+        * Scripts/run-webkit-tests: remove broken --svg option
+
 2007-10-28  Darin Adler  <darin@apple.com>
 
         Reviewed by Adam.
