--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-28  Darin Adler  <darin@apple.com>
+
+        - Windows build fix; get rid of unused parameter
+
+        * kjs/nodes.cpp: (KJS::ResolveNode::optimizeVariableAccess): Don't pass it.
+        * kjs/nodes.h: (KJS::LocalVarAccessNode::LocalVarAccessNode): Remove it.
+        The assertions weren't all that helpful.
+
 2007-10-28  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.  Add include of MathExtras.h.
