2007-10-28  Eric Seidel  <eric@webkit.org>
        Reviewed by aroben.

        * platform/mac/svg/custom/path-bad-data-expected.txt: updated to better results


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27205 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-28  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by aroben.
+
+        * platform/mac/svg/custom/path-bad-data-expected.txt: updated to better results
+
 2007-10-28  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
