--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,17 @@
 2007-10-28  Geoffrey Garen  <ggaren@apple.com>
 
+        Temporarily disabling some ASSERTs I introduced in my last check-in 
+        because of http://bugs.webkit.org/show_bug.cgi?id=15747
+        Lots of layout tests fail the !HashTranslator::equal(KeyTraits::emptyValue() ASSERT
+
+        * wtf/HashTable.h:
+        (WTF::::lookup):
+        (WTF::::lookupForWriting):
+        (WTF::::fullLookupForWriting):
+        (WTF::::add):
+
+2007-10-28  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Darin Adler.
         
         Fixed http://bugs.webkit.org/show_bug.cgi?id=15746
