2007-10-28  Mark Rowe  <mrowe@apple.com>
        Disable assertions in a manner that doesn't break the Qt Windows build.

        * wtf/HashTable.h:
        (WTF::::lookup):
        (WTF::::lookupForWriting):
        (WTF::::fullLookupForWriting):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27214 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-28  Mark Rowe  <mrowe@apple.com>
+
+        Disable assertions in a manner that doesn't break the Qt Windows build.
+
+        * wtf/HashTable.h:
+        (WTF::::lookup):
+        (WTF::::lookupForWriting):
+        (WTF::::fullLookupForWriting):
+
 2007-10-28  Geoffrey Garen  <ggaren@apple.com>
 
         Temporarily disabling some ASSERTs I introduced in my last check-in 
