2007-10-29  Eric Seidel  <eric@webkit.org>
        Build fix only, no review.

        * JavaScriptCore.exp: Export symbol for new StringInstance::getOwnPropertySlot


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27220 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-29  Eric Seidel  <eric@webkit.org>
+
+        Build fix only, no review.
+
+        * JavaScriptCore.exp: Export symbol for new StringInstance::getOwnPropertySlot
+
 2007-10-29  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.  Move struct declarations into nodes.h.
