2007-10-29  Eric Seidel  <eric@webkit.org>
        Reviewed by Maciej.
        
        SunSpider claims this was a 0.7% speedup.

        * kjs/string_object.cpp:
        (KJS::StringProtoFunc::callAsFunction): avoid mallocing a jsString in the common case


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27222 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-29  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Maciej.
+        
+        SunSpider claims this was a 0.7% speedup.
+
+        * kjs/string_object.cpp:
+        (KJS::StringProtoFunc::callAsFunction): avoid mallocing a jsString in the common case
+
 2007-10-29  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Mark.
