--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-29  David Kilzer  <ddkilzer@webkit.org>
+
+        Test for:  REGRESSION (r17701): Favicons should be viewable as image documents
+        <http://bugs.webkit.org/show_bug.cgi?id=15640>
+
+        Reviewed by Darin.
+
+        * fast/images/favicon-as-image.html: Added.
+        * fast/images/resources/favicon.ico: Added.
+        * platform/mac/fast/images/favicon-as-image-expected.checksum: Added.
+        * platform/mac/fast/images/favicon-as-image-expected.png: Added.
+        * platform/mac/fast/images/favicon-as-image-expected.txt: Added.
+
 2007-10-28  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
