--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-29  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        * Scripts/run-sunspider: Added --shark20 option, to run Shark at its highest sample
+        resolution instead of its default.
+
 2007-10-29  David Kilzer  <ddkilzer@webkit.org>
 
         Fixed showStatus() to print status for successfully resolved conflicts when using git.
