--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-29  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Roben.
+
+        Add a globalFlag property to the LayoutTestController to allow cross-domain indications.
+
+        * DumpRenderTree/LayoutTestController.cpp:
+        (LayoutTestController::LayoutTestController):
+        (getGlobalFlagCallback):
+        (setGlobalFlagCallback):
+        (LayoutTestController::getJSClass):
+        (LayoutTestController::staticValues):
+        * DumpRenderTree/LayoutTestController.h:
+        (LayoutTestController::globalFlag):
+        (LayoutTestController::setGlobalFlag):
+
 2007-10-29  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
