updated reviewers for my previous changelog.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27241 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,6 +1,9 @@
 2007-10-29  Kevin McCullough  <kmccullough@apple.com>
 
-        Reviewed by Maciej and Adam.
+        updated reviewers for my previous changelog.
+
+2007-10-29  Kevin McCullough  <kmccullough@apple.com>
+        Reviewed by Maciej and Adam and Geoff.
 
         - Minor mac-side improvements including moving a function to a more
         appropriate location, fixing a warning, and correctly checking
